# C-emblem

./: CMakeLists.txt  README.md  game.sh  test.sh
src/model/: Attributes.cpp  Grade.hpp  Stats.cpp  Stats.hpp
src/model/character/: Attributes.hpp  Stats.cpp  Stats.hpp
src/view/: main.cpp
test/: CMakeLists.txt  ExampleTests.cpp
